discussion/couchbase-java-client/41945/41945_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

JCBC-575: Add support for a RawJsonDocument.

Motivation
----------
This changeset adds the capabilities to pass in a raw (already encoded)
JSON document, largely driven by the fact that users may already have their
JSON stack set up and just want to pass in the data. We do not want to get
in the way.

Modifications
-------------
Adds the raw JSON document which justs takes the string, expects its valid,
creates a buffer out of it and stores it down. This also is very low overhead.

Result
------
More flexibility in dealing with JSON documents in combination with custom
JSON marshallers.

Change-Id: Ibd7e37ae48de197df72713acd7f4daeadc352904

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Michael Nitschinger
Date: 2014-10-07 14:54:41.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Michael Nitschinger
Date: 2014-10-07 14:55:37.000000000
Message: 
Patch Set 1: Verified+1
----------------------------------------------------------------------------------------------------------------------
Author: Sergey Avseyev
Date: 2014-10-08 14:53:59.000000000
Message: 
Patch Set 1: Code-Review-1

(1 comment)
Line:29, src/test/java/com/couchbase/client/java/transcoder/BinaryTranscoderTest.java -> wrong path?

  /home/avsej/prj/couchbase/java/java-client/src/test/java/com/couchbase/client/java/transcoder/BinaryTranscoderTest.java:29: error: package jdk.nashorn.internal.ir.annotations does not exist
  import jdk.nashorn.internal.ir.annotations.Ignore;
                                            ^
  /home/avsej/prj/couchbase/java/java-client/src/test/java/com/couchbase/client/java/transcoder/BinaryTranscoderTest.java:54: error: cannot find symbol
      @Ignore
       ^
    symbol:   class Ignore
    location: class BinaryTranscoderTest
  /home/avsej/prj/couchbase/java/java-client/src/test/java/com/couchbase/client/java/transcoder/BinaryTranscoderTest.java:60: error: cannot find symbol
      @Ignore
       ^
    symbol:   class Ignore
    location: class BinaryTranscoderTest

----------------------------------------------------------------------------------------------------------------------
